--- a/style/login.css
+++ b/style/login.css
@@ -1,10 +1,94 @@
+@import url('logo.css');
+
 body {
-    background-color: #181818;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
+    url('../img/background.png');
+    background-size: cover;
+    background-position: left;
+    background-repeat: no-repeat;
+}
+
+.login {
+    margin-top: 60px;
 }
 
 .telaLogin {
-    margin-top: 10%; 
-    background-color: #A00000; 
-    padding: 50px; 
-    border-radius: 40px;
+    background-color: rgba(160, 0, 0, 0.8);
+    height: 600px;
+    width: 1000px;
+    border-radius: 100px;
 }
+
+.telaLogin h1 {
+    margin-top: 100px;
+}
+
+.botao-login {
+    background-color: white;
+    color: rgb(31, 31, 31);
+    border-radius: 40px;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: 700;
+    width: 200px;
+}
+
+.textoDireita {
+    background-color: #A00000;
+    height: 600px;
+    border-radius: 100px;
+}
+
+.textoDireita h1{
+    margin-top: 150px;
+}
+
+.form-control {
+    width: 400px;
+}
+
+.scroll-container {
+    max-height: 180px; /* Defina a altura máxima do contêiner */
+    overflow-y: auto;  /* Permite o scroll vertical */
+    padding-right: 15px; /* Adiciona padding para evitar que o conteúdo seja oculto pelo scroll */
+}
+
+
+@media only screen and (max-width: 600px) {
+    body {
+      max-width: 100%;
+      background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), 
+      url('../img/bgloginimage.png');
+    }
+
+    .form-control {
+        width: 226px;
+    }
+
+
+    .telaLogin {
+        background-color: #A00000;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 300px;
+        border-radius: 40px;
+        height: 460px;
+        margin-bottom: 15px;
+    }
+
+    .telaLogin h1 {
+        margin-top: 0;
+    }
+
+    .textoDireita {
+        background-color: #A00000;
+        height: 20px;
+        padding: 0;
+    }
+
+    .textoDireita h1{
+        display: none;
+    }
+  }
