--- a/style/login.css
+++ b/style/login.css
@@ -1,4 +1,6 @@
 @import url('logo.css');
+@import url('reset.css');
+
 
 body {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
@@ -13,7 +15,7 @@ body {
 }
 
 .telaLogin {
-    background-color: rgba(160, 0, 0, 0.8);
+    background-color: rgba(160, 0, 0, 0.6);
     height: 600px;
     width: 1000px;
     border-radius: 100px;
@@ -32,6 +34,8 @@ body {
     font-size: 16px;
     font-weight: 700;
     width: 200px;
+    text-decoration: none;
+    text-align: center;
 }
 
 .textoDireita {
