--- a/style/logo.css
+++ b/style/logo.css
@@ -1,7 +1,7 @@
 @import url('reset.css');
 
 .logo-ifood {
-    position: fixed; /* Fixa a logo na posição definida, independentemente do scroll */
+    position: absolute; /* Fixa a logo na posição definida, independentemente do scroll */
     top: 10px; /* Distância da logo para o topo da página */
     right: 10px; /* Distância da logo para a direita da página */
     width: 80px; /* Define uma largura para a logo (ajuste conforme necessário) */
