--- a/style/menu.css
+++ b/style/menu.css
@@ -2,23 +2,52 @@
 
 body {
     height: 100vh;
-    background-image: url(../img/bgmenu.png);
+    background-image: url(../assets/img/bgmenu.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
 
+.sections {
+    background-color: #a00000; 
+    border-radius: 25px;
+    height: 180px;
+}
+
+.text {
+    align-items: center;
+    color: white;
+    text-align: center;
+    text-decoration: none; 
+    font-size: 22px; 
+    font-weight: 700;
+}
+
 @media (max-width: 767px) {
 
     body {
-        background-repeat: repeat;
+        background-image: none;
+        background-color: #181818;
+    }
+    .text {
+        font-size: 18px;
+    }
+
+    .sections {
+        height: 120px;
     }
 
     .start {
-        margin-top: 600px;
+        margin-top: 260px;
     }
 
     .foot {
         margin-bottom: 24px;
+    }
+}
+
+@media (max-width: 400px){
+    .start {
+        margin-top: 450px;
     }
 }
