--- a/style/login.css
+++ b/style/login.css
@@ -4,7 +4,7 @@
 
 body {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
-    url('../img/background.png');
+    url('../assets/img/background.png');
     background-size: cover;
     background-position: left;
     background-repeat: no-repeat;
@@ -63,7 +63,7 @@ body {
     body {
       max-width: 100%;
       background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), 
-      url('../img/bgloginimage.png');
+      url('../assets/img/bgloginimage.png');
     }
 
     .form-control {
