--- a/style/pedidos.css
+++ b/style/pedidos.css
@@ -43,22 +43,22 @@ input {
     width: 8px;
 }
 
-/* Estilo do trilho da barra */
+
 .card-area::-webkit-scrollbar-track {
-    background: #f1f1f1; /* Cor de fundo do trilho */
-    border-radius: 10px; /* Bordas arredondadas */
+    background: #f1f1f1; 
+    border-radius: 10px; 
 }
 
-/* Estilo do polegar da barra (parte que rola) */
+
 .card-area::-webkit-scrollbar-thumb {
-    background-color: #1E509B; /* Cor do polegar */
-    border-radius: 10px; /* Bordas arredondadas */
-    border: 2px solid #f1f1f1; /* Espaço ao redor do polegar */
+    background-color: #1E509B; 
+    border-radius: 10px; 
+    border: 2px solid #f1f1f1;
 }
 
-/* Cor quando o polegar está sendo clicado */
+
 .card-area::-webkit-scrollbar-thumb:hover {
-    background-color: #163d7a; /* Cor mais escura ao passar o mouse */
+    background-color: #163d7a; 
 }
 
 #container_esq {
@@ -214,7 +214,7 @@ button {
 
     .contagem button {
         padding: 0;
-        font-size: 10px; /* Aumenta um pouco o tamanho da fonte */
+        font-size: 10px; 
     }
 
     .container_dir {
@@ -240,8 +240,8 @@ button {
     }
 
     .card-area::-webkit-scrollbar-track {
-        background: transparent; /* Cor de fundo do trilho */
+        background: transparent;
         border-radius: 10px;
-        border: 1px solid white; /* Bordas arredondadas */
+        border: 1px solid white; 
     }
 }
