--- a/style/transacoes.css
+++ b/style/transacoes.css
@@ -27,7 +27,7 @@ header {
 }
 
 .saldo-atual {
-  background-color: #181818; /* Cor verde */
+  background-color: #181818; 
   color: white;
   padding: 15px 20px;
   border-radius: 10px;
@@ -60,8 +60,8 @@ header {
 }
 
 .table-shadow {
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra suave */
-  border-radius: 5px; /* Canto levemente arredondado */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+  border-radius: 5px;
 }
 
 .table-container {
@@ -104,10 +104,10 @@ header {
     }
 
     table {
-        font-size: 10px; /* Reduz o tamanho da fonte */
+        font-size: 10px; 
       }
       th, td {
-        padding: 0.3rem; /* Reduz o espaçamento entre células */
+        padding: 0.3rem; 
       }
 
       #bottom {
